--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,7 @@ a {
   text-underline-offset: 8px;
   text-decoration-thickness: 1px;
 }
+
+.commonBackground {
+  background-color: rgb(255, 251, 251);
+}
