--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -5,4 +5,40 @@
     margin-left: auto;
     margin-right: auto;
     background-color: white;
+
+    display: block;
+
+    padding: 2vw 4vw;
 }
+
+.title {
+    font-size: 35px;
+}
+
+.content {
+    margin-top: 1.6vw;
+    font-size: 17px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3vw;
+}   
+
+.inputContainer {
+    /* height: auto; */
+}
+
+.commentContainer {
+    width: 100%;
+    height: 70px;
+    border-radius: 6px;
+    margin: 2.2vw 0;
+    outline: none;
+    resize: none;
+    padding: 5px 6px;
+    border: 2px solid black;
+}
+
