--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -39,6 +39,25 @@
     outline: none;
     resize: none;
     padding: 5px 6px;
+    border: 2px solid rgb(125, 125, 125);
+}
+
+.commentContainer:focus {
     border: 2px solid black;
 }
 
+.postButton {
+    display: block;
+    width: 65px;
+    height: 35px;
+    margin-left: auto;
+    cursor: pointer;
+    border-radius: 4px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
+}
+
+.postButton:hover {
+    transform: scale(1.0005);
+    box-shadow: 2px 2px 2px rgb(160, 159, 159);
+}
