--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -13,11 +13,17 @@
 
 .title {
     font-size: 35px;
+    text-align: center;
 }
 
 .content {
     margin-top: 1.6vw;
-    font-size: 17px;
+    /* font-size: 17px; */
+
+    white-space: pre-wrap;
+    width: 100%;
+    /* height: 30vw; */
+    overflow-wrap: break-word;
 }
 
 .container {
