--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -21,7 +21,7 @@
     /* font-size: 17px; */
 
     white-space: pre-wrap;
-    width: 100%;
+    /* width: 100%; */
     /* height: 30vw; */
     overflow-wrap: break-word;
 }
