--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -72,7 +72,8 @@
     display: flex;
     flex-direction: column;
     gap: 2vw;
-    margin: 4vw 0;
+    padding-top: 4vw;
+    padding-bottom: 2vw;
 }
 
 .logintoComment {
